--- a/SimpleJsonConfig/SimpleJsonConfig.nuspec
+++ b/SimpleJsonConfig/SimpleJsonConfig.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>SimpleJsonConfig</id>
+    <id>SimpleJsonConfig.GM</id>
     <version>1.0.0</version>
     <authors>tinwhistler</authors>
     <owners>tinwhistler</owners>
